core/src/gen_calc_value/CalcValueParser.cpp

// Generated from CalcValue.g4 by ANTLR 4.8


#include "include/gen_calc_value/CalcValueVisitor.h"

#include "include/gen_calc_value/CalcValueParser.h"

using namespace antlrcpp;
using namespace antlr4;

CalcValueParser::CalcValueParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CalcValueParser::~CalcValueParser() {
  delete _interpreter;
}

std::string CalcValueParser::getGrammarFileName() const {
  return "CalcValue.g4";
}

const std::vector<std::string>& CalcValueParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CalcValueParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParseContext ------------------------------------------------------------------

CalcValueParser::ParseContext::ParseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CalcValueParser::ParseContext::EQUAL() {
  return getToken(CalcValueParser::EQUAL, 0);
}

CalcValueParser::StatementContext* CalcValueParser::ParseContext::statement() {
  return getRuleContext<CalcValueParser::StatementContext>(0);
}

tree::TerminalNode* CalcValueParser::ParseContext::EOF() {
  return getToken(CalcValueParser::EOF, 0);
}


size_t CalcValueParser::ParseContext::getRuleIndex() const {
  return CalcValueParser::RuleParse;
}


antlrcpp::Any CalcValueParser::ParseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitParse(this);
  else
    return visitor->visitChildren(this);
}

CalcValueParser::ParseContext* CalcValueParser::parse() {
  ParseContext *_localctx = _tracker.createInstance<ParseContext>(_ctx, getState());
  enterRule(_localctx, 0, CalcValueParser::RuleParse);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    match(CalcValueParser::EQUAL);
    setState(17);
    statement();
    setState(18);
    match(CalcValueParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CalcValueParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CalcValueParser::ExprContext* CalcValueParser::StatementContext::expr() {
  return getRuleContext<CalcValueParser::ExprContext>(0);
}


size_t CalcValueParser::StatementContext::getRuleIndex() const {
  return CalcValueParser::RuleStatement;
}


antlrcpp::Any CalcValueParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CalcValueParser::StatementContext* CalcValueParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CalcValueParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(20);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncExprStatementContext ------------------------------------------------------------------

CalcValueParser::FuncExprStatementContext::FuncExprStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CalcValueParser::FuncExprStatementContext::getRuleIndex() const {
  return CalcValueParser::RuleFuncExprStatement;
}

void CalcValueParser::FuncExprStatementContext::copyFrom(FuncExprStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MedianFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::MedianFuncContext::MEDIAN() {
  return getToken(CalcValueParser::MEDIAN, 0);
}

tree::TerminalNode* CalcValueParser::MedianFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::MedianFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::MedianFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::MedianFuncContext::MedianFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::MedianFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitMedianFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MaxFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::MaxFuncContext::MAX() {
  return getToken(CalcValueParser::MAX, 0);
}

tree::TerminalNode* CalcValueParser::MaxFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::MaxFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::MaxFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::MaxFuncContext::MaxFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::MaxFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitMaxFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ChooseFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::ChooseFuncContext::CHOOSE() {
  return getToken(CalcValueParser::CHOOSE, 0);
}

tree::TerminalNode* CalcValueParser::ChooseFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ExprContext* CalcValueParser::ChooseFuncContext::expr() {
  return getRuleContext<CalcValueParser::ExprContext>(0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::ChooseFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::ChooseFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::ChooseFuncContext::ChooseFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::ChooseFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitChooseFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MinFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::MinFuncContext::MIN() {
  return getToken(CalcValueParser::MIN, 0);
}

tree::TerminalNode* CalcValueParser::MinFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::MinFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::MinFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::MinFuncContext::MinFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::MinFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitMinFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CountFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::CountFuncContext::COUNT() {
  return getToken(CalcValueParser::COUNT, 0);
}

tree::TerminalNode* CalcValueParser::CountFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::CountFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::CountFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::CountFuncContext::CountFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::CountFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitCountFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AverageFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::AverageFuncContext::AVERAGE() {
  return getToken(CalcValueParser::AVERAGE, 0);
}

tree::TerminalNode* CalcValueParser::AverageFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::AverageFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::AverageFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::AverageFuncContext::AverageFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::AverageFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitAverageFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SumFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::SumFuncContext::SUM() {
  return getToken(CalcValueParser::SUM, 0);
}

tree::TerminalNode* CalcValueParser::SumFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::SumFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::SumFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::SumFuncContext::SumFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::SumFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitSumFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TextjoinFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::TextjoinFuncContext::TEXTJOIN() {
  return getToken(CalcValueParser::TEXTJOIN, 0);
}

tree::TerminalNode* CalcValueParser::TextjoinFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

std::vector<CalcValueParser::ExprContext *> CalcValueParser::TextjoinFuncContext::expr() {
  return getRuleContexts<CalcValueParser::ExprContext>();
}

CalcValueParser::ExprContext* CalcValueParser::TextjoinFuncContext::expr(size_t i) {
  return getRuleContext<CalcValueParser::ExprContext>(i);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::TextjoinFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::TextjoinFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::TextjoinFuncContext::TextjoinFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::TextjoinFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitTextjoinFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConcatFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::ConcatFuncContext::CONCAT() {
  return getToken(CalcValueParser::CONCAT, 0);
}

tree::TerminalNode* CalcValueParser::ConcatFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::ConcatFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::ConcatFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::ConcatFuncContext::ConcatFuncContext(FuncExprStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::ConcatFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitConcatFunc(this);
  else
    return visitor->visitChildren(this);
}
CalcValueParser::FuncExprStatementContext* CalcValueParser::funcExprStatement() {
  FuncExprStatementContext *_localctx = _tracker.createInstance<FuncExprStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, CalcValueParser::RuleFuncExprStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CalcValueParser::SUM: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::SumFuncContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(22);
        match(CalcValueParser::SUM);
        setState(23);
        match(CalcValueParser::OPAR);
        setState(24);
        paramsExprList(0);
        setState(25);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::AVERAGE: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::AverageFuncContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(27);
        match(CalcValueParser::AVERAGE);
        setState(28);
        match(CalcValueParser::OPAR);
        setState(29);
        paramsExprList(0);
        setState(30);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::MEDIAN: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::MedianFuncContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(32);
        match(CalcValueParser::MEDIAN);
        setState(33);
        match(CalcValueParser::OPAR);
        setState(34);
        paramsExprList(0);
        setState(35);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::MIN: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::MinFuncContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(37);
        match(CalcValueParser::MIN);
        setState(38);
        match(CalcValueParser::OPAR);
        setState(39);
        paramsExprList(0);
        setState(40);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::MAX: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::MaxFuncContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(42);
        match(CalcValueParser::MAX);
        setState(43);
        match(CalcValueParser::OPAR);
        setState(44);
        paramsExprList(0);
        setState(45);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::CONCAT: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::ConcatFuncContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(47);
        match(CalcValueParser::CONCAT);
        setState(48);
        match(CalcValueParser::OPAR);
        setState(49);
        paramsExprList(0);
        setState(50);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::COUNT: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::CountFuncContext>(_localctx));
        enterOuterAlt(_localctx, 7);
        setState(52);
        match(CalcValueParser::COUNT);
        setState(53);
        match(CalcValueParser::OPAR);
        setState(54);
        paramsExprList(0);
        setState(55);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::TEXTJOIN: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::TextjoinFuncContext>(_localctx));
        enterOuterAlt(_localctx, 8);
        setState(57);
        match(CalcValueParser::TEXTJOIN);
        setState(58);
        match(CalcValueParser::OPAR);
        setState(59);
        expr(0);
        setState(60);
        match(CalcValueParser::T__0);
        setState(61);
        expr(0);
        setState(62);
        match(CalcValueParser::T__0);
        setState(63);
        paramsExprList(0);
        setState(64);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::CHOOSE: {
        _localctx = dynamic_cast<FuncExprStatementContext *>(_tracker.createInstance<CalcValueParser::ChooseFuncContext>(_localctx));
        enterOuterAlt(_localctx, 9);
        setState(66);
        match(CalcValueParser::CHOOSE);
        setState(67);
        match(CalcValueParser::OPAR);
        setState(68);
        expr(0);
        setState(69);
        match(CalcValueParser::T__0);
        setState(70);
        paramsExprList(0);
        setState(71);
        match(CalcValueParser::CPAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncLogicalStatementContext ------------------------------------------------------------------

CalcValueParser::FuncLogicalStatementContext::FuncLogicalStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CalcValueParser::FuncLogicalStatementContext::getRuleIndex() const {
  return CalcValueParser::RuleFuncLogicalStatement;
}

void CalcValueParser::FuncLogicalStatementContext::copyFrom(FuncLogicalStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- OrFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::OrFuncContext::OR() {
  return getToken(CalcValueParser::OR, 0);
}

tree::TerminalNode* CalcValueParser::OrFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::OrFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::OrFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::OrFuncContext::OrFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::OrFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitOrFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfsFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::IfsFuncContext::IFS() {
  return getToken(CalcValueParser::IFS, 0);
}

tree::TerminalNode* CalcValueParser::IfsFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::IfsFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::IfsFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::IfsFuncContext::IfsFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::IfsFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitIfsFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::IfFuncContext::IF() {
  return getToken(CalcValueParser::IF, 0);
}

tree::TerminalNode* CalcValueParser::IfFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

std::vector<CalcValueParser::ExprContext *> CalcValueParser::IfFuncContext::expr() {
  return getRuleContexts<CalcValueParser::ExprContext>();
}

CalcValueParser::ExprContext* CalcValueParser::IfFuncContext::expr(size_t i) {
  return getRuleContext<CalcValueParser::ExprContext>(i);
}

tree::TerminalNode* CalcValueParser::IfFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::IfFuncContext::IfFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::IfFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitIfFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NotFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::NotFuncContext::NOT() {
  return getToken(CalcValueParser::NOT, 0);
}

tree::TerminalNode* CalcValueParser::NotFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ExprContext* CalcValueParser::NotFuncContext::expr() {
  return getRuleContext<CalcValueParser::ExprContext>(0);
}

tree::TerminalNode* CalcValueParser::NotFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::NotFuncContext::NotFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::NotFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitNotFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SwitchFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::SwitchFuncContext::SWITCH() {
  return getToken(CalcValueParser::SWITCH, 0);
}

tree::TerminalNode* CalcValueParser::SwitchFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ExprContext* CalcValueParser::SwitchFuncContext::expr() {
  return getRuleContext<CalcValueParser::ExprContext>(0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::SwitchFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::SwitchFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::SwitchFuncContext::SwitchFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::SwitchFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitSwitchFunc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndFuncContext ------------------------------------------------------------------

tree::TerminalNode* CalcValueParser::AndFuncContext::AND() {
  return getToken(CalcValueParser::AND, 0);
}

tree::TerminalNode* CalcValueParser::AndFuncContext::OPAR() {
  return getToken(CalcValueParser::OPAR, 0);
}

CalcValueParser::ParamsExprListContext* CalcValueParser::AndFuncContext::paramsExprList() {
  return getRuleContext<CalcValueParser::ParamsExprListContext>(0);
}

tree::TerminalNode* CalcValueParser::AndFuncContext::CPAR() {
  return getToken(CalcValueParser::CPAR, 0);
}

CalcValueParser::AndFuncContext::AndFuncContext(FuncLogicalStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any CalcValueParser::AndFuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CalcValueVisitor*>(visitor))
    return parserVisitor->visitAndFunc(this);
  else
    return visitor->visitChildren(this);
}
CalcValueParser::FuncLogicalStatementContext* CalcValueParser::funcLogicalStatement() {
  FuncLogicalStatementContext *_localctx = _tracker.createInstance<FuncLogicalStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, CalcValueParser::RuleFuncLogicalStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CalcValueParser::IF: {
        _localctx = dynamic_cast<FuncLogicalStatementContext *>(_tracker.createInstance<CalcValueParser::IfFuncContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(75);
        match(CalcValueParser::IF);
        setState(76);
        match(CalcValueParser::OPAR);
        setState(77);
        expr(0);
        setState(78);
        match(CalcValueParser::T__0);
        setState(79);
        expr(0);
        setState(80);
        match(CalcValueParser::T__0);
        setState(81);
        expr(0);
        setState(82);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::IFS: {
        _localctx = dynamic_cast<FuncLogicalStatementContext *>(_tracker.createInstance<CalcValueParser::IfsFuncContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(84);
        match(CalcValueParser::IFS);
        setState(85);
        match(CalcValueParser::OPAR);
        setState(86);
        paramsExprList(0);
        setState(87);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::SWITCH: {
        _localctx = dynamic_cast<FuncLogicalStatementContext *>(_tracker.createInstance<CalcValueParser::SwitchFuncContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(89);
        match(CalcValueParser::SWITCH);
        setState(90);
        match(CalcValueParser::OPAR);
        setState(91);
        expr(0);
        setState(92);
        match(CalcValueParser::T__0);
        setState(93);
        paramsExprList(0);
        setState(94);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::NOT: {
        _localctx = dynamic_cast<FuncLogicalStatementContext *>(_tracker.createInstance<CalcValueParser::NotFuncContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(96);
        match(CalcValueParser::NOT);
        setState(97);
        match(CalcValueParser::OPAR);
        setState(98);
        expr(0);
        setState(99);
        match(CalcValueParser::CPAR);
        break;
      }

      case CalcValueParser::AND: {
        _localctx = dynamic_cast<FuncLogicalStatementContext *>(_tracker.createInstance<CalcValueParser::AndFuncContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(101);
        match(CalcValueParser::AND);
        setState(102);
        match(CalcValueParser::OPAR);
        setState(103);
        paramsExprList(0);
        setState(104);
        match(CalcValueParser::CPAR);
        break;
      }
